2002-03-25  Elena Zannoni  <ezannoni@redhat.com>

        * generic/gdbtk-hooks.c: Include cli/cli-decode.h for
        cmd_list_element.

2002-03-25  Alexandre Oliva  <aoliva@redhat.com>

	* generic/gdbtk.c (HAS_STDARG): Define.
	* generic/gdbtk-cmds.c (HAS_STDARG): Likewise.
	* generic/gdbtk-hooks.c (HAS_STDARG): Likewise.

2002-03-14  Keith Seitz  <keiths@redhat.com>

	* library/bpwin.itb (constructor): Set some sane initial
	size.

2002-03-07  Martin M. Hunt  <hunt@redhat.com>

	* library/srctextwin.itb (SrcTextWin::showBPBalloon): Put 
	linefeeds between multiple breakpoints.

2002-03-06  Martin M. Hunt  <hunt@redhat.com>

	* library/srctextwin.itb (SrcTextWin::showBPBalloon):
	Reformat output. Add conditions, ignore count, commands.

	* library/interface.tcl (gdbtk_tcl_readline): Remove
	call to "command::insert" and instead insert the command
	into the console window.
	(gdbtk_tcl_readline_end): Catch the unsets and do not call
	non-existent function command::end_multi_line_input.

2002-03-06  Martin M. Hunt  <hunt@redhat.com>
	
	* library/bpwin.itb: Left-justify the labels in
	the table.

2002-03-06  Keith Seitz  <keiths@redhat.com>

	* generic/gdbtk-cmds.c: Include "ctype.h" if available.
        (gdb_get_mem): Renamed to gdb_update_mem.
        (gdb_update_mem): Take array as first tcl argument. This
        array will hold the data for the table, which is now stuffed
        in C instead of tcl.
        (gdb_eval): Use our own ui-file instead of gdb_stdout.
	* library/memwin.ith (_update_address): New method.
	(update_address): Address expression is no longer optional.
	* library/memwin.itb (build_win): Use _update_address instead of
	update_address.
	(toggle_enabled): Ditto.
	(newsize): Use _update_address instead of update_addr.
	(update_address_cb): Use _update_address instead of update_address.
	(do_popup): Likewise.
	(goto): Likewise.
	(incr_addr): Use _update_address instead of update_addr.
	(edit): Use gdb_update_mem instead of gdb_get_mem.